# dpf

./: CMakeLists.txt  CMakeSettings.json  LICENSE
.github/workflows/: build-windows.yml
dependencies/: CMakeLists.txt
include/: dpf.hpp  libdpf.hpp
include/dpf/: dpf_context.hpp  dpf_file_mod.hpp  dpf_input_file.hpp  dpf_inputs.hpp  dpf_result.hpp
include/libdpf/: dpf.hpp  dpf_context.hpp  enums.hpp
include/libdpf/misc/: dpf_file_mod.hpp  dpf_inputs.hpp  dpf_result.hpp
source/: CMakeLists.txt
source/src/: dpf.cpp
source/src/dpf/: dpf_context.cpp  dpf_context_handle.cpp  dpf_context_handle.hpp
source/src/misc/: dpf_context_handle.cpp  dpf_context_handle.hpp  dpf_context_internal.cpp  dpf_context_internal.hpp
source/src/utilities/: binread.hpp  dpf_util_binr.hpp  dpf_util_string.hpp
tests/: CMakeLists.txt  dpf_tests.cpp  utilities_assert.hpp
