CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

IF(POLICY CMP0135)
    CMAKE_POLICY(SET CMP0135 NEW)
ENDIF()

OPTION(DPF_TESTS "Build dpf tests" ON)

PROJECT(libdpf C CXX)

GET_DIRECTORY_PROPERTY(PARENT_DIR PARENT_DIRECTORY)
IF(PARENT_DIR STREQUAL "")
    SET(DPF_TOP_LEVEL TRUE)
ELSE()
    SET(DPF_TOP_LEVEL FALSE)
ENDIF()

IF(DPF_TOP_LEVEL AND DPF_TESTS)
    ENABLE_TESTING()
ENDIF()

SET(DPF_INCLUDE_DIR   "${PROJECT_SOURCE_DIR}/include")
SET(DPF_LIBRARIES_DIR "${PROJECT_SOURCE_DIR}/libraries")

IF(DPF_TOP_LEVEL)
    IF(MSVC)
        SET(CMAKE_C_FLAGS           "/DWIN32 /D_WINDOWS /W3")
        SET(CMAKE_C_FLAGS_DEBUG     "/MTd /Od /Ob0 /RTC1 /Zi")
        SET(CMAKE_C_FLAGS_RELEASE   "/MT /O2 /Ob2 /DNDEBUG")

        SET(CMAKE_CXX_FLAGS         "/std:c++20 /DWIN32 /D_WINDOWS /W3 /EHsc /GR /GL-")
        SET(CMAKE_CXX_FLAGS_DEBUG   "/MTd /Od /Ob0 /RTC1 /Zi")
        SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /DNDEBUG")
    ENDIF()
ENDIF()

IF(WIN32 AND MSVC)
    ADD_SUBDIRECTORY("dependencies")
    ADD_SUBDIRECTORY("source")

    IF(DPF_TOP_LEVEL AND DPF_TESTS)
        ADD_SUBDIRECTORY("tests")
    ENDIF()
ELSE()
    MESSAGE(FATAL_ERROR "${CMAKE_CXX_COMPILER_ID} currently not supported.")
ENDIF()
