FILE(GLOB_RECURSE DPF_HEADERS CONFIGURE_DEPENDS 
    "${DPF_INCLUDE_DIR}/*.hpp"
)

FILE(GLOB_RECURSE BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

SET(MINIZ_BUILD_FILES
    "${DPF_LIBRARIES_DIR}/miniz/miniz.c"
)

ADD_LIBRARY(dpf STATIC
    ${MINIZ_BUILD_FILES}
    ${DPF_HEADERS}
    ${BUILD_FILES}
)

TARGET_INCLUDE_DIRECTORIES(dpf PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
TARGET_INCLUDE_DIRECTORIES(dpf PUBLIC  "${DPF_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(dpf PRIVATE "${DPF_LIBRARIES_DIR}")

IF(MSVC)
    TARGET_COMPILE_DEFINITIONS(dpf PRIVATE -D_WINDOWS)
    TARGET_COMPILE_DEFINITIONS(dpf PRIVATE -D_CRT_SECURE_NO_WARNINGS)
ENDIF()