FILE(GLOB_RECURSE DPF_HEADERS CONFIGURE_DEPENDS 
    "${DPF_INCLUDE_DIR}/*.hpp"
)

FILE(GLOB_RECURSE BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

SET(MINIZ_BUILD_FILES
    "${DPF_LIBRARIES_DIR}/miniz/miniz.c"
)

ADD_LIBRARY(libdpf STATIC
    ${MINIZ_BUILD_FILES}
    ${DPF_HEADERS}
    ${BUILD_FILES}
)

TARGET_INCLUDE_DIRECTORIES(libdpf PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
TARGET_INCLUDE_DIRECTORIES(libdpf PUBLIC  "${DPF_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(libdpf PRIVATE "${DPF_LIBRARIES_DIR}")

IF(MSVC)
    TARGET_COMPILE_DEFINITIONS(libdpf PRIVATE -D_WINDOWS)
    TARGET_COMPILE_DEFINITIONS(libdpf PRIVATE -D_CRT_SECURE_NO_WARNINGS)
ENDIF()