CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

ADD_EXECUTABLE(dpf_tests 
	"dpf_tests.cpp"
)

TARGET_INCLUDE_DIRECTORIES(dpf_tests PRIVATE "${CMAKE_SOURCE_DIR}")
TARGET_INCLUDE_DIRECTORIES(dpf_tests PRIVATE "${CMAKE_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES(dpf_tests PRIVATE dpf)

IF(MSVC)
    SET(CMAKE_CXX_FLAGS	"/std:c++20 /EHsc")
ENDIF()

ADD_TEST(NAME create_and_extract COMMAND dpf_tests 0 ${CMAKE_SOURCE_DIR})
